<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="nuevo_usuario">Nuevo</string>
    <string name="action_settings">Settings</string>
     <string name="empty">La Agenda está vacía</string>
    
    <string name="title_activity_registro_usuarios">RegistroUsuariosActivity</string>    
    <string name="registrar_usuario">Add</string>
    <string name="id_usuario">Id Usuario</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="email_usuario">Email Usuario</string>
    <string name="limpiar">New</string>
    <string name="volver">Volver inicio</string>
        
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    
    <string name="title_activity_actualizar_usuario">ActualizarUsuario</string>
    <string name="actualizar">Actualizar</string>

</resources>
