<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cip.ruben.agenda.RegistroUsuariosActivity" >

    <EditText
        android:id="@+id/et_emaail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/et_nombre"
        android:layout_below="@+id/et_nombre"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/email_usuario" />


    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_nombre"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/et_nombre"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/id_usuario" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_reg_usuario"
        android:layout_alignRight="@+id/b_reg_usuario"
        android:layout_below="@+id/et_id"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nombre_usuario" />
    
    
    <Button
        android:id="@+id/b_reg_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_emaail"
        android:layout_marginTop="34dp"
        android:text="@string/registrar_usuario" />

    <Button
        android:id="@+id/b_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_reg_usuario"
        android:layout_alignRight="@+id/b_reg_usuario"
        android:layout_below="@+id/b_reg_usuario"
        android:layout_marginTop="24dp"
        android:text="@string/limpiar" />

    <Button
        android:id="@+id/b_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b_limpiar"
        android:layout_alignRight="@+id/b_limpiar"
        android:layout_below="@+id/b_limpiar"
        android:layout_marginTop="19dp"
        android:text="@string/volver" />

</RelativeLayout>
