<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cip.ruben.agenda.ActualizarUsuario" >

    <EditText
        android:id="@+id/et_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/id_usuario"
        android:ems="10"/>

    <EditText
        android:id="@+id/et_nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_id2"
        android:layout_alignRight="@+id/et_id2"
        android:layout_below="@+id/et_id2"
        android:layout_marginTop="36dp"
        android:hint="@string/nombre_usuario"
        android:ems="10" />

    <EditText
        android:id="@+id/et_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_nombre2"
        android:layout_alignRight="@+id/et_nombre2"
        android:layout_below="@+id/et_nombre2"
        android:layout_marginTop="41dp"
        android:hint="@string/email_usuario"
        android:ems="10" />

    <Button
        android:id="@+id/bt_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_email2"
        android:layout_marginTop="40dp"
        android:text="@string/actualizar" />

    <Button
        android:id="@+id/b_volver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_actualizar"
        android:layout_alignRight="@+id/bt_actualizar"
        android:layout_below="@+id/bt_actualizar"
        android:layout_marginTop="30dp"
        android:text="@string/volver" />

</RelativeLayout>
